# codeX

./: CMakeLists.txt
src/: codeX_base.h  codeX_main.cc  codeX_mesh.cc  codeX_mesh.h  codeX_opengl_wrapper.cc  codeX_opengl_wrapper.h  codeX_shader.cc  codeX_shader.h  codeX_texture.cc  codeX_texture.h
src/shader/: fragment.frag  fragment_linux.frag  fragment_mac.frag  vertext.vert  vertext_linux.vert  vertext_mac.vert
